fix unnoticed changes on autogenerated files to support tests (make check)

--- a/Makefile.in
+++ b/Makefile.in
@@ -81,7 +81,7 @@ subdir = .
 DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
 	$(top_srcdir)/configure $(am__configure_deps) COPYING README \
 	build-aux/compile build-aux/config.guess build-aux/config.sub \
-	build-aux/install-sh build-aux/missing \
+	build-aux/depcomp build-aux/install-sh build-aux/missing \
 	$(top_srcdir)/build-aux/compile \
 	$(top_srcdir)/build-aux/config.guess \
 	$(top_srcdir)/build-aux/config.sub \
@@ -289,6 +289,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = src
 EXTRA_DIST = autogen.sh \
+	testbench.sh \
 	README.autotools \
 	Changelog \
 	README \
