fix remove debian/Makefile.am from Makefile.am:EXTRA_DIST and update relative Makefile.in

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,6 +21,5 @@ EXTRA_DIST += debian/source \
 	debian/copyright \
 	debian/control \
 	debian/rules \
-	debian/docs \
-	debian/Makefile.am
+	debian/docs
 
