--- a/Makefile.in
+++ b/Makefile.in
@@ -288,16 +288,11 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = src
-EXTRA_DIST = autogen.sh \
-	testbench.sh \
-	README.autotools \
-	Changelog \
-	README \
-	README.md \
-	TRICKS \
-	COPYING \
-	README.1st
-
+EXTRA_DIST = autogen.sh testbench.sh README.autotools README.debian \
+	Changelog README README.md TRICKS COPYING README.1st \
+	debian/source debian/source/format debian/changelog \
+	debian/compat debian/README.Debian debian/README.source \
+	debian/copyright debian/control debian/rules debian/docs
 all: all-recursive
 
 .SUFFIXES:
